--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,23 +5,37 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Connect to server",
+            "type": "go",
+            "request": "launch",
+            "mode": "remote",
+            "remotePath": "${fileDirname}",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "${fileDirname}",
+            "env": {},
+            "args": []
+        },
+        {
             "name": "Launch Package",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${fileDirname}",
             "args": [
-                "-apiToken",
-                "${input:apiToken}"
+                "-oauth-token",
+                "AQAAAAAAA8e6AATuwZhGUSsQ2UhYsPhUraZbuKk"
+                // "-apiToken",
+                // "${input:apiToken}"
             ],
             "asRoot": true
         }
     ],
     "inputs": [
-        {
-            "type": "promptString",
-            "id": "apiToken",
-            "description": "Yandex IAM token"
-          }
+        // {
+        //     "type": "promptString",
+        //     "id": "apiToken",
+        //     "description": "Yandex IAM token"
+        // }
     ]
 }
