--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -25,6 +25,15 @@ jobs:
       - name: build
         uses: docker://golang:1.18.0-bullseye
         with:
-          args: make lint build
+          args: make lint buildbin
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip bin/translator-proxy-win.zip bin/translator-proxy.exe
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip bin/translator-proxy-linux.zip bin/translator-proxy-linux
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip bin/translator-proxy-mac.zip bin/translator-proxy-mac          
             
           
