--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode/*.log
 bin/
-translator-proxy.exe
-translator-proxy
-translator-proxy-mac
-translator-proxy-linux
+translate-proxy.exe
+translate-proxy
+translate-proxy-mac
+translate-proxy-linux
